--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Hello, I'm IMANUEL CALEB S.P <span></span></h1>
-            <p>A passionate student learning web development <a href="certificate.jpeg" class="btn">View My Work</a></p>
+            <h1>Hello, I'm NOWFIYA H <span></span></h1>
+            <p>A passionate student learning web development <a href="Screenshot 2025-09-12 173014.png" class="btn">View My Work</a></p>
         </div>
     </section>
 
@@ -35,7 +35,7 @@
     <section id="about" class="about">
         <h2>About Me</h2>
         <div class="about-content">
-            <img src="profile pic.jpeg" alt="Profile Photo" />
+            <img src="WhatsApp Image 2025-09-12 at 17.47.18_026f9f29.jpg" alt="Profile Photo" />
             <p>I am a student enthusiastic about technology and design. I love building interactive, user-friendly web applications.</p>
         </div>
     </section>
@@ -64,7 +64,7 @@
         <h2>Contact Me</h2>
         <form id="contact-form">
             <input type="text" id="name" placeholder="Your Name" required />
-            <input type="email" id="email" placeholder="imanuelcaleb24aid@vetias.ac.in" required />
+            <input type="email" id="email" placeholder="nowfiyah24aid@vetias.ac.in" required />
             <textarea id="message" placeholder="Your Message" required></textarea>
             <button type="submit">Send</button>
         </form>
@@ -73,7 +73,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 IMANUEL CALEB S.P | All rights reserved</p>
+        <p>&copy; 2025 NOWFIYA | All rights reserved</p>
     </footer>
 
 </body>
